crates/cli/tests/snapshots/update__update_tests__update_fails_before_network_when_active_release_version_differs.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV update\n",
    stderr: "error: PV application update requires active release 0.2.5, found 0.3.0\n",
}
