crates/cli/tests/snapshots/update__update_tests__update_ignores_stale_startup_failure_marker_after_health_failure.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV update\nPV application: update failed; rolled back to 0.2.3\n",
    stderr: "error: daemon did not become healthy after update\n",
}
