crates/cli/tests/snapshots/update__update_tests__update_normalizes_stale_launch_agent_without_restarting_when_current.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "PV update\nPV application: current 0.2.5\nPrivileged helper: current 1.0.0 (protocol 1)\nManaged Resources: current\n",
    stderr: "Waiting for the reconciliation slot (elapsed: 0s)\n",
}
