crates/cli/tests/snapshots/update__update_tests__update_on_a_terminal_forwards_no_color_to_the_continuation.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "[pv] update\n\n┌  PV update\n│\n◇  Privileged helper: current 1.0.0 (protocol 1)\n│\n◇  PV application: updated 0.2.5 -> 0.3.0\n│\n◇  Daemon restarted and healthy\n",
    stderr: "",
}
