crates/cli/tests/snapshots/update__update_tests__update_on_a_terminal_renders_a_flow.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "[pv] update\n\n┌  PV update\n│\n◇  PV application: current 0.2.5\n│\n◇  Privileged helper: current 1.0.0 (protocol 1)\n│\n◇  Managed Resources: updated 2 artifact(s)\n│\n└  Managed Resources reconciled: system ok\n",
    stderr: "Waiting for the reconciliation slot (elapsed: 0s)\n",
}
