crates/cli/tests/snapshots/update__update_tests__update_rejects_registered_helper_identity_that_cannot_be_rolled_back.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV update\n",
    stderr: "error: privileged-helper rollback preflight failed: registered helper 0.9.0 (protocol 2) does not match active release helper 2.0.0 (protocol 2); run `pv setup` before updating\n",
}
