crates/cli/tests/snapshots/update__update_tests__update_reports_current_app_without_restarting_daemon.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "PV update\nPV application: current 0.2.4\nPrivileged helper: current 1.0.0 (protocol 1)\nWaiting for the reconciliation slot (elapsed: 0s)\nManaged Resources: current\n",
    stderr: "",
}
